BTC->EAC, Bitcoin->Earthcoin

--- a/frontend/src/index.mempool.bitb.html
+++ b/frontend/src/index.mempool.bitb.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BITB | Bitwise Bitcoin ETF</title>
+  <title>BITB | Bitwise Earthcoin ETF</title>
   <script src="/resources/config.js"></script>
   <script src="/resources/customize.js"></script>
   <base href="/">
@@ -17,7 +17,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@mempool">
   <meta name="twitter:creator" content="@mempool">
-  <meta name="twitter:title" content="BITB | Bitwise Bitcoin ETF">
+  <meta name="twitter:title" content="BITB | Bitwise Earthcoin ETF">
   <meta name="twitter:description" content="BITB provides low-cost access to bitcoin through a professionally managed fund." />
   <meta name="twitter:image" content="https://mempool.space/resources/bitb/bitb-preview.jpg" />
   <meta name="twitter:domain" content="bitwise.mempool.space">
