--- a/frontend/src/index.mempool.onbtc.html
+++ b/frontend/src/index.mempool.onbtc.html
@@ -3,22 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>National Bitcoin Office of El Salvador</title>
+  <title>National Earthcoin Office of El Salvador</title>
   <script src="/resources/config.js"></script>
   <script src="/resources/customize.js"></script>
   <base href="/">
 
-  <meta name="description" content="The National Bitcoin Office (ONBTC) of El Salvador under President @nayibbukele" />
+  <meta name="description" content="The National Earthcoin Office (ONEAC) of El Salvador under President @nayibbukele" />
   <meta property="og:image" content="https://mempool.space/resources/onbtc/onbtc-preview.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="1000" />
-  <meta property="og:description" content="The National Bitcoin Office (ONBTC) of El Salvador under President @nayibbukele" />
+  <meta property="og:description" content="The National Earthcoin Office (ONEAC) of El Salvador under President @nayibbukele" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@mempool">
   <meta name="twitter:creator" content="@mempool">
-  <meta name="twitter:title" content="National Bitcoin Office of El Salvador">
-  <meta name="twitter:description" content="The National Bitcoin Office (ONBTC) of El Salvador under President @nayibbukele" />
+  <meta name="twitter:title" content="National Earthcoin Office of El Salvador">
+  <meta name="twitter:description" content="The National Earthcoin Office (ONEAC) of El Salvador under President @nayibbukele" />
   <meta name="twitter:image" content="https://mempool.space/resources/onbtc/onbtc-preview.jpg" />
   <meta name="twitter:domain" content="bitcoin.gob.sv">
 
