--- a/frontend/src/index.mempool.onbtc.html
+++ b/frontend/src/index.mempool.onbtc.html
@@ -9,7 +9,7 @@
   <base href="/">
 
   <meta name="description" content="The National Earthcoin Office (ONEAC) of El Salvador under President @nayibbukele" />
-  <meta property="og:image" content="https://mempool.space/resources/onbtc/onbtc-preview.jpg" />
+  <meta property="og:image" content="/resources/onbtc/onbtc-preview.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="1000" />
@@ -19,7 +19,7 @@
   <meta name="twitter:creator" content="@mempool">
   <meta name="twitter:title" content="National Earthcoin Office of El Salvador">
   <meta name="twitter:description" content="The National Earthcoin Office (ONEAC) of El Salvador under President @nayibbukele" />
-  <meta name="twitter:image" content="https://mempool.space/resources/onbtc/onbtc-preview.jpg" />
+  <meta name="twitter:image" content="/resources/onbtc/onbtc-preview.jpg" />
   <meta name="twitter:domain" content="bitcoin.gob.sv">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/resources/onbtc/favicons/apple-touch-icon.png">
