--- a/frontend/src/index.liquid.html
+++ b/frontend/src/index.liquid.html
@@ -8,7 +8,7 @@
   <base href="/">
 
   <meta name="description" content="Explore the full Earthcoin ecosystem with The Mempool Open Source Project&reg;. See Liquid transactions & assets, get network info, and more.">
-  <meta property="og:image" content="https://liquid.network/resources/liquid/liquid-network-preview.png" />
+  <meta property="og:image" content="/resources/liquid/liquid-network-preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1000" />
   <meta property="og:image:height" content="500" />
@@ -18,7 +18,7 @@
   <meta name="twitter:creator" content="@mempool">
   <meta name="twitter:title" content="The Mempool Open Source Project®">
   <meta name="twitter:description" content="Explore the full Earthcoin ecosystem with The Mempool Open Source Project&reg;. See Liquid transactions & assets, get network info, and more." />
-  <meta name="twitter:image:src" content="https://liquid.network/resources/liquid/liquid-network-preview.png" />
+  <meta name="twitter:image:src" content="/resources/liquid/liquid-network-preview.png" />
   <meta name="twitter:domain" content="liquid.network">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/resources/liquid/favicons/apple-touch-icon.png">
