--- a/frontend/src/index.mempool.bitb.html
+++ b/frontend/src/index.mempool.bitb.html
@@ -9,7 +9,7 @@
   <base href="/">
 
   <meta name="description" content="BITB provides low-cost access to bitcoin through a professionally managed fund." />
-  <meta property="og:image" content="https://mempool.space/resources/bitb/bitb-preview.jpg" />
+  <meta property="og:image" content="/resources/bitb/bitb-preview.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="1000" />
@@ -19,7 +19,7 @@
   <meta name="twitter:creator" content="@mempool">
   <meta name="twitter:title" content="BITB | Bitwise Earthcoin ETF">
   <meta name="twitter:description" content="BITB provides low-cost access to bitcoin through a professionally managed fund." />
-  <meta name="twitter:image" content="https://mempool.space/resources/bitb/bitb-preview.jpg" />
+  <meta name="twitter:image" content="/resources/bitb/bitb-preview.jpg" />
   <meta name="twitter:domain" content="bitwise.mempool.space">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/resources/bitb/favicons/apple-touch-icon.png">
