--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mempool - Earthcoin Explorer</title>
+  <title>Earthcoin.space - Earthcoin Explorer</title>
   <script src="/resources/config.js"></script>
   <script src="/resources/customize.js"></script>
   <base href="/">
 
   <meta name="description" content="Explore the full Earthcoin ecosystem with The Mempool Open Source Project®. See the real-time status of your transactions, get network info, and more." />
-  <meta property="og:image" content="https://mempool.space/resources/previews/mempool-space-preview.jpg" />
+  <meta property="og:image" content="/resources/previews/mempool-space-preview.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="2000" />
   <meta property="og:image:height" content="1000" />
@@ -19,8 +19,8 @@
   <meta name="twitter:creator" content="@mempool">
   <meta name="twitter:title" content="The Mempool Open Source Project®">
   <meta name="twitter:description" content="Explore the full Earthcoin ecosystem with The Mempool Open Source Project®. See the real-time status of your transactions, get network info, and more." />
-  <meta name="twitter:image" content="https://mempool.space/resources/previews/mempool-space-preview.jpg" />
-  <meta name="twitter:domain" content="mempool.space">
+  <meta name="twitter:image" content="/resources/previews/mempool-space-preview.jpg" />
+  <meta name="twitter:domain" content="earthcoin.space">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
